updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm excited to start this Bootcamp</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Romania</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Crosswords, music, horror fandom</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Still figuring it out</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Chicago, IL</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I started teaching myself three years ago and fell in love. I'm considering a career change from the biomedical sciences to programming or a way to integrate the two.</p>
     </section>
 
     <footer id="footer">
